# blood-report-analyzer-merged

./: .gitignore  INDEX.md  MERGE_SUMMARY.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  START_HERE.md  pyproject.toml  requirements-core.txt  requirements.txt  run.py  setup-staged.bat  setup.bat  setup.sh
backend/api/: main.py
backend/api/services/: disease_service.py  extract_service.py  ml_service.py  ocr_service.py
backend/api/utils/: mapping.json  normal_ranges.json
frontend/: app.py
